# QQBot

./: .env.dev  README.md  bot.py  pyproject.toml
data/: data.sqlite3  userscd.json
data/div1+2/: div1.txt  div2.txt
go-cqhttp配置/: config.yml
qqbot/plugins/_nonebot_plugin_setu2/: __init__.py  config.py
qqbot/plugins/contest/: __init__.py  getcontest.py
qqbot/plugins/div1+2/: __init__.py
qqbot/plugins/help/: __init__.py
qqbot/plugins/myplugin/: __init__.py
qqbot/plugins/nonebot_plugin_code/: __init__.py  run.py
qqbot/plugins/sjmm/: __init__.py
qqbot/plugins/test/: __init__.py
