[tool.poetry]
name = "qqbot"
version = "0.1.0"
description = "qqbot"
authors = ["HKing"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0-beta.1"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"

[tool.nonebot]
plugins = ["nonebot_plugin_emojimix", "nonebot_plugin_remake", "nonebot_plugin_setu", "haruka_bot", "nonebot_plugin_code", "nonebot_plugin_chess", "nonebot_plugin_wordcloud"]
plugin_dirs = ["qqbot/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
